tests/proph/wp_proph.stderr
warning: unused imports: `Prophecised`, `mutref_auto_resolve`, `specification`
  --> ../tests/proph/wp_proph.rs:8:51
   |
8  |     macros::{assertion, extract_lemma, predicate, specification, with_freeze_lemma},
   |                                                   ^^^^^^^^^^^^^
9  |     mutref_auto_resolve,
   |     ^^^^^^^^^^^^^^^^^^^
10 |     prophecies::{Ownable, Prophecised, Prophecy},
   |                           ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"std"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"creusillian"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
Expr { scope: Node(215), expr: e10 }

Call { ty: FnDef(DefId(21:432 ~ gilogic[8e9c]::__stubs::instantiate_lvars), [(*mut N<T/#0>, *mut N<T/#0>, (Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) }), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) })), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) }), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) })), (), Closure(DefId(0:49 ~ wp_proph[6031]::extract_y___proof::{closure#0}), [T/#0, i32, Binder(extern "RustCall" fn((*mut N<T/#0>, *mut N<T/#0>, (Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) }), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) })), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) }), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) }))), []), (&'{erased} mut WP<T/#0>,)])]), fun: e1, args: [e6], from_hir_call: true, fn_span: ../tests/proph/wp_proph.rs:180:1: 187:3 (#34) }

error: unsupported proof step InstantiateLVars Call { ty: FnDef(DefId(21:432 ~ gilogic[8e9c]::__stubs::instantiate_lvars), [(*mut N<T/#0>, *mut N<T/#0>, (Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) }), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) })), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) }), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) })), (), Closure(DefId(0:49 ~ wp_proph[6031]::extract_y___proof::{closure#0}), [T/#0, i32, Binder(extern "RustCall" fn((*mut N<T/#0>, *mut N<T/#0>, (Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) }), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) })), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) }), Alias(Projection, AliasTy { args: [T/#0], def_id: DefId(21:103 ~ gilogic[8e9c]::prophecies::Ownable::RepresentationTy) }))), []), (&'{erased} mut WP<T/#0>,)])]), fun: e1, args: [e6], from_hir_call: true, fn_span: ../tests/proph/wp_proph.rs:180:1: 187:3 (#34) }

error: aborting due to 1 previous error; 1 warning emitted

